# mini-agentic-rl

./: .gitignore  README.md  pyproject.toml  requirements-mini.txt  requirements.txt
.sisyphus/drafts/: mini-agentic-rl-analysis.md
.sisyphus/plans/: gsm8k-benchmark.md  run-mini-agentic-rl.md
data/: test.parquet  train.parquet
data/gsm8k/: test.parquet  train.parquet
docs/plans/: 2026-02-05-core-architecture-refactor-design.md
examples/: benchmark.py  math_agent_demo.py  train_math_agent.py
mini_agent_lighting/: __init__.py  config.py  llm_proxy.py
mini_agent_lighting/adapter/: base.py  messages.py  triplet.py
mini_agent_lighting/algorithm/: base.py  decorator.py  fast.py  mini_grpo.py  utils.py
mini_agent_lighting/emitter/: annotation.py  exception.py  message.py  object.py  reward.py
mini_agent_lighting/execution/: base.py  client_server.py  shared_memory.py
mini_agent_lighting/litagent/: decorator.py  litagent.py
mini_agent_lighting/runner/: agent.py  base.py  legacy.py
mini_agent_lighting/store/: base.py  client_server.py  collection_based.py  memory.py  mongo.py  threading.py  utils.py
mini_agent_lighting/tracer/: agentops.py  base.py  dummy.py  otel.py  weave.py
mini_agent_lighting/trainer/: legacy.py  trainer.py
mini_agent_lighting/types/: core.py  tracer.py
mini_agent_lighting/utils/: mini_llm_server.py  otel.py  otlp.py  server_launcher.py
scripts/: test_interactive.py  train.py  train_gsm8k_agent.py  train_sft.py
src/: __init__.py
src/agents/: __init__.py  base.py  (+2 more)
tests/: test_runner.py  test_store.py  test_tracer.py
(+56 files in other folders)
