[project]
name = "mini-agentic-rl"
version = "0.2.0"
description = "Simplified Agent-Lighting-style framework with LoRA and tool calling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "uvicorn",
  "fastapi",
  "openai",
  "transformers",
  "torch",
  "pandas",
  "tqdm",
]

[project.optional-dependencies]
lora = [
  "peft",
]

[project.scripts]
mini-agent-lighting = "mini_agent_lighting.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mini_agent_lighting"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/tests/**",
  "/docker/**",
  "/contrib/**",
  "/.github/**",
]
